@@ -28,6 +28,7 @@ import java.util.*;
 
 import static com.powsybl.commons.test.ComparisonUtils.assertTxtEquals;
 import static com.powsybl.dynaflow.DynaFlowProvider.MODULE_SPECIFIC_PARAMETERS;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
@@ -63,11 +64,11 @@ class DynaFlowParametersTest extends AbstractSerDeTest {
         double startTime = 0.;
         double stopTime = 100.;
         double precision = 15.45;
-        double timeOfEvent = 10.;
-        List<String> chosenOutputs = Arrays.asList(OutputTypes.STEADYSTATE.name(), OutputTypes.TIMELINE.name());
+        double timeOfEvent = 14.;
+        List<String> chosenOutputs = List.of(OutputTypes.STEADYSTATE.name(), OutputTypes.TIMELINE.name());
         double timeStep = 0;
         StartingPointMode startingPointMode = StartingPointMode.FLAT;
-        boolean mergeLoads = false;
+        boolean mergeLoads = true;
 
         MapModuleConfig moduleConfig = platformConfig.createModuleConfig(MODULE_SPECIFIC_PARAMETERS);
         moduleConfig.setStringProperty("svcRegulationOn", Boolean.toString(svcRegulationOn));
@@ -99,7 +100,7 @@ class DynaFlowParametersTest extends AbstractSerDeTest {
         assertEquals(stopTime, parameters.getStopTime(), 0.1d);
         assertEquals(precision, parameters.getPrecision(), 0.1d);
         assertEquals(timeOfEvent, parameters.getTimeOfEvent(), 0.1d);
-        assertArrayEquals(chosenOutputs.toArray(), parameters.getChosenOutputs().toArray());
+        assertThat(parameters.getChosenOutputs()).map(OutputTypes::name).containsExactlyInAnyOrderElementsOf(chosenOutputs);
         assertEquals(timeStep, parameters.getTimeStep(), 0.1d);
         assertEquals(startingPointMode, parameters.getStartingPointMode());
         assertEquals(mergeLoads, parameters.isMergeLoads());
@@ -111,22 +112,23 @@ class DynaFlowParametersTest extends AbstractSerDeTest {
         DynaFlowParameters parametersExt = parameters.getExtension(DynaFlowParameters.class);
         assertNotNull(parametersExt);
 
-        assertEquals("{chosenOutputs=[TIMELINE], mergeLoads=true}", parametersExt.toString());
+        assertEquals("{svcRegulationOn=true, shuntRegulationOn=true, automaticSlackBusOn=true, dsoVoltageLevel=45.0, activePowerCompensation=PMAX, startTime=0.0, stopTime=100.0, chosenOutputs=[TIMELINE], timeStep=10.0, startingPointMode=WARM, mergeLoads=true}",
+                parametersExt.toString());
 
-        assertNull(parametersExt.getSvcRegulationOn());
-        assertNull(parametersExt.getShuntRegulationOn());
-        assertNull(parametersExt.getAutomaticSlackBusOn());
-        assertNull(parametersExt.getDsoVoltageLevel());
-        assertNull(parametersExt.getActivePowerCompensation());
+        assertTrue(parametersExt.getSvcRegulationOn());
+        assertTrue(parametersExt.getShuntRegulationOn());
+        assertTrue(parametersExt.getAutomaticSlackBusOn());
+        assertEquals(45d, parametersExt.getDsoVoltageLevel());
+        assertEquals(ActivePowerCompensation.PMAX, parametersExt.getActivePowerCompensation());
         assertNull(parametersExt.getSettingPath());
         assertNull(parametersExt.getAssemblingPath());
-        assertNull(parametersExt.getStartTime());
-        assertNull(parametersExt.getStopTime());
+        assertEquals(0d, parametersExt.getStartTime());
+        assertEquals(100d, parametersExt.getStopTime());
         assertNull(parametersExt.getPrecision());
         assertNull(parametersExt.getSa());
-        assertEquals(List.of(OutputTypes.TIMELINE.name()), parametersExt.getChosenOutputs());
-        assertNull(parametersExt.getTimeStep());
-        assertNull(parametersExt.getStartingPointMode());
+        assertThat(parametersExt.getChosenOutputs()).containsExactly(OutputTypes.TIMELINE);
+        assertEquals(10d, parametersExt.getTimeStep());
+        assertEquals(StartingPointMode.WARM, parametersExt.getStartingPointMode());
         assertTrue(parametersExt.isMergeLoads());
     }
 
@@ -204,7 +206,8 @@ class DynaFlowParametersTest extends AbstractSerDeTest {
 
         try (InputStream actual = Files.newInputStream(parameterFile);
              InputStream expected = getClass().getResourceAsStream("/params_default.json")) {
-            assertTxtEquals(Objects.requireNonNull(expected), actual);
+            assertNotNull(expected);
+            assertTxtEquals(expected, actual);
         }
     }
 
@@ -226,10 +229,10 @@ class DynaFlowParametersTest extends AbstractSerDeTest {
             .setStopTime(100.)
             .setPrecision(0.)
             .setTimeOfEvent(10.)
-            .setChosenOutputs(Collections.singletonList(OutputTypes.STEADYSTATE.name()))
+            .setChosenOutputs(Set.of(OutputTypes.STEADYSTATE))
             .setTimeStep(2.6)
             .setStartingPointMode(StartingPointMode.WARM)
-            .setMergeLoads(false);
+            .setMergeLoads(true);
         lfParameters.addExtension(DynaFlowParameters.class, dynaFlowParameters);
 
         Path workingDir = fileSystem.getPath("dynaflow/workingDir");
@@ -238,7 +241,8 @@ class DynaFlowParametersTest extends AbstractSerDeTest {
 
         try (InputStream actual = Files.newInputStream(parameterFile);
              InputStream expected = getClass().getResourceAsStream("/params.json")) {
-            assertTxtEquals(Objects.requireNonNull(expected), actual);
+            assertNotNull(expected);
+            assertTxtEquals(expected, actual);
         }
     }
 
@@ -256,7 +260,7 @@ class DynaFlowParametersTest extends AbstractSerDeTest {
         double stopTime = 100.;
         double precision = 15.45;
         double timeOfEvent = 10.;
-        List<String> chosenOutputs = Arrays.asList(OutputTypes.STEADYSTATE.name(), OutputTypes.TIMELINE.name());
+        Set<OutputTypes> chosenOutputs = Set.of(OutputTypes.STEADYSTATE, OutputTypes.TIMELINE);
         double timeStep = 0;
         StartingPointMode startingPointMode = StartingPointMode.WARM;
         boolean mergeLoads = false;
@@ -273,7 +277,7 @@ class DynaFlowParametersTest extends AbstractSerDeTest {
         properties.put("stopTime", Double.toString(stopTime));
         properties.put("precision", Double.toString(precision));
         properties.put("timeOfEvent", Double.toString(timeOfEvent));
-        properties.put("chosenOutputs", OutputTypes.STEADYSTATE.name() + ", " + OutputTypes.TIMELINE.name());
+        properties.put("chosenOutputs", "STEADYSTATE, TIMELINE");
         properties.put("timeStep", Double.toString(timeStep));
         properties.put("startingPointMode", startingPointMode.getName());
         properties.put("mergeLoads", Boolean.toString(mergeLoads));
@@ -291,7 +295,7 @@ class DynaFlowParametersTest extends AbstractSerDeTest {
         assertEquals(stopTime, dynaFlowParameters.getStopTime(), 0.1d);
         assertEquals(precision, dynaFlowParameters.getPrecision(), 0.1d);
         assertEquals(timeOfEvent, dynaFlowParameters.getTimeOfEvent(), 0.1d);
-        assertArrayEquals(chosenOutputs.toArray(), dynaFlowParameters.getChosenOutputs().toArray());
+        assertThat(dynaFlowParameters.getChosenOutputs()).containsExactlyInAnyOrderElementsOf(chosenOutputs);
         assertEquals(timeStep, dynaFlowParameters.getTimeStep(), 0.1d);
         assertEquals(startingPointMode, dynaFlowParameters.getStartingPointMode());
         assertEquals(mergeLoads, dynaFlowParameters.isMergeLoads());
